# ros2_openvino_toolkit

./: .clang-format  .gitignore  BINARY_VERSION_README.md  CMakeLists.txt  Jenkinsfile  OPEN_SOURCE_CODE_README.md  README.md  ROS2_FOXY_OPENVINO_Toolkit_install.md  ROS2_OpenVINO_Toolkit_install.md  environment_setup.sh  modules.conf  openvino_silent.cfg  package.xml
.ci/: Jenkinsfile
dynamic_vino_lib/: CMakeLists.txt  Doxyfile  package.xml
dynamic_vino_lib/cmake/: feature_defs.cmake
dynamic_vino_lib/src/: factory.cpp  pipeline.cpp  pipeline_filters.cpp  pipeline_manager.cpp  pipeline_params.cpp
openvino_msgs/: CMakeLists.txt  package.xml
openvino_msgs/msg/: Connection.msg  Pipeline.msg
openvino_node/: CMakeLists.txt  package.xml
openvino_node/config/: face_detection.yaml  face_reidentification.yaml  object_detection.yaml  object_segmentation.yaml  person_detection.yaml  person_reidentification.yaml
openvino_node/launch/: object_detection.launch.py  rs_face_reid.launch.py  rs_od.launch.py  rs_od_in_one_process.launch.py  rs_osg.launch.py  rs_person_reid.launch.py
openvino_param_lib/: CMakeLists.txt  package.xml
openvino_param_lib/param/: pipeline.yaml
openvino_param_lib/src/: param_manager.cpp
openvino_people_msgs/: CMakeLists.txt  package.xml
openvino_people_msgs/msg/: AgeGender.msg  AgeGenderStamped.msg  Emotion.msg  EmotionsStamped.msg  HeadPose.msg  HeadPoseStamped.msg  Landmark.msg  LandmarkStamped.msg  LicensePlateStamped.msg  ObjectInMask.msg  PersonAttribute.msg  PersonAttributeStamped.msg  PersonsStamped.msg  ReidentificationStamped.msg  VehicleAttribs.msg  VehicleAttribsStamped.msg
openvino_people_msgs/srv/: AgeGenderSrv.srv  EmotionSrv.srv
openvino_ros/: CMakeLists.txt  package.xml
openvino_ros/src/: object_detection_ssd.cpp  object_detection_yolov2.cpp  object_segmentation.cpp  openvino_base.cpp  openvino_factory.cpp  reidentification.cpp  tracker.cpp
openvino_utils/: CMakeLists.txt  package.xml
openvino_utils/include/: visualization.hpp
openvino_utils/src/: visualization.cpp  viz_detection.cpp  viz_factory.cpp  viz_reidentification.cpp  viz_segmentation.cpp
openvino_wrapper_lib/: CMakeLists.txt  package.xml
openvino_wrapper_lib/src/: pipeline.cpp  pipeline_manager.cpp  pipeline_params.cpp
sample/: CMakeLists.txt  image_object_server.cpp  image_server.cpp  main.cpp  object_detection_sample.cpp  object_detection_with_params.cpp  package.xml  pipeline_with_params.cpp  utility.hpp
sample/UML/: face_detection.xml
sample/include/: utility.hpp
sample/launch/: image_object_server.launch.py  image_object_server_oss.launch.py  image_people_server.launch.py  image_people_server_oss.launch.py  multi_pipeline_service.launch.py  multi_pipeline_service_oss.launch.py  pipeline_composite_object_topic.launch.py  pipeline_composite_object_topic.py  pipeline_face_reidentification.launch.py  pipeline_human_pose.launch.py  pipeline_image.launch.py  pipeline_image_ci_test.py  pipeline_image_oss.launch.py  pipeline_object.launch.py  pipeline_object_oss.launch.py  pipeline_object_oss_topic.launch.py  pipeline_object_topic.launch.py  pipeline_object_yolo.launch.py  pipeline_object_yolo_ci_test.py  pipeline_object_yolo_oss.launch.py  pipeline_object_yolo_topic.launch.py  pipeline_object_yolo_topic_oss.launch.py  pipeline_object_yolov5_ci_test.py  pipeline_object_yolov8_ci_test.py  pipeline_people.launch.py  pipeline_people_ci_test.py  pipeline_people_ip.launch.py  pipeline_people_myriad.launch.py  pipeline_people_oss.launch.py  pipeline_person_attributes.launch.py  pipeline_person_attributes_ci_test.py  pipeline_reidentification.launch.py  pipeline_reidentification_ci_test.py  pipeline_reidentification_oss.launch.py  pipeline_segmentation.launch.py  pipeline_segmentation_ci_test.py  pipeline_segmentation_image.launch.py  pipeline_segmentation_image_ci_test.py  pipeline_segmentation_instance.launch.py  pipeline_segmentation_instance_ci_test.py  (+9 more)
sample/param/: .pipeline_segmentation.yaml.swp  image_object_server.yaml  image_object_server_oss.yaml  image_people_server.yaml  image_people_server_oss.yaml  multi_pipleine_service.yaml  multi_pipleine_service_object.yaml  multi_pipleine_service_object_oss.yaml  pipeline_composite_object_topic.yaml  pipeline_face_reidentification.yaml  pipeline_human_pose.yaml  pipeline_image.yaml  pipeline_image_ci.yaml  pipeline_image_oss.yaml  pipeline_image_video.yaml  pipeline_object.yaml  pipeline_object_oss.yaml  pipeline_object_oss_topic.yaml  pipeline_object_oss_yolo.yaml  pipeline_object_topic.yaml  pipeline_object_yolo.yaml  pipeline_object_yolo_oss.yaml  pipeline_object_yolo_topic.yaml  pipeline_object_yolo_topic_oss.yaml  pipeline_object_yolov5_ci.yaml  pipeline_object_yolov8_ci.yaml  pipeline_people.yaml  pipeline_people_ci.yaml  pipeline_people_ip.yaml  pipeline_people_myriad.yaml  pipeline_people_original.yaml  pipeline_people_oss.yaml  pipeline_person_attributes.yaml  pipeline_person_attributes_ci.yaml  pipeline_person_reidentification.yaml  pipeline_person_reidentification_oss.yaml  pipeline_reidentification.yaml  pipeline_reidentification_ci.yaml  pipeline_reidentification_oss.yaml  pipeline_segmentation.yaml  (+13 more)
sample/src/: image_object_client.cpp  image_object_server.cpp  image_people_client.cpp  image_people_server.cpp  image_server.cpp  main.cpp  object_detection_with_params.cpp  parameters.cpp  pipeline_composite.cpp  pipeline_with_params.cpp
tests/: CMakeLists.txt  package.xml
tests/launch/: image_object_service_test.launch.py  image_people_service_test.launch.py  pipeline_face_reidentification_test.launch.py  pipeline_face_test.launch.py  pipeline_image_test.launch.py  pipeline_object_test.launch.py  pipeline_reidentification_test.launch.py  pipeline_segmentation_test.launch.py  pipeline_vehicle_detection_test.launch.py
tests/param/: image_object_service_test.yaml  image_people_service_test.yaml  pipeline_anormal.yaml  pipeline_face_reid_video.yaml  pipeline_face_test.yaml  pipeline_image_test.yaml  pipeline_object_test.yaml  pipeline_object_yolo_test.yaml  pipeline_reidentification_test.yaml  (+1 more)
(+662 files in other folders)
