<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvino_utils</name>
  <version>0.0.1</version>
  <description>
     Utilities for ROS2 OpenVINO package
  </description>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>object_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>